--- a/CommandService/appsettings.Development.json
+++ b/CommandService/appsettings.Development.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CommandService": "https://localhost:5003/api/c/platforms"
+  "RabbitMQHost": "localhost",
+  "RabbitMQPort": "5672",
+  "GrpcPlatform": "https://localhost:5001"
 }
