--- a/CommandService/appsettings.json
+++ b/CommandService/appsettings.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CommandService": "https://localhost:5003/api/c/platforms"
+  "AllowedHosts": "*"
 }
