--- a/CommandService/Properties/launchSettings.json
+++ b/CommandService/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:26696",
-      "sslPort": 44325
+      "applicationUrl": "http://localhost:48010",
+      "sslPort": 44328
     }
   },
   "profiles": {
-    "PlatformService": {
+    "CommandService": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://localhost:5003;http://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
